# YOLO-from-Scratch

./: .gitignore  LICENSE  README.md  config.py  dataset.py  engine.py  install_torch.py  loss.py  model.py  pyproject.toml  tal.py  utils.py
yolo/: bus_truck.yaml  dataset.py  train_infer.ipynb
